# trace-invest

./: .gitignore  CODEBASE_OVERVIEW.md  PHASE2_VERIFICATION_REPORT.md  README.md  TRACE_CODEBASE.md  TRACE_PHASE2_AUDIT.md  TRACE_PHASE3_AUDIT.md  TRACE_PLATFORM_AUDIT.md  TRACE_SYSTEM_STATE.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py  script.py.mako
backend/: Dockerfile
configs/: _deprecated_markets.yaml  data_sources.yaml  risk.yaml  system.yaml  universe.yaml
data/: README.md
docs/: PHASE1.md  README.md  Trace_Current_Status_UPDATED.txt  structure.txt  structure_UPDATED.txt
frontend/: Dockerfile  README.md  index_live.html  next.config.ts  package-lock.json  package.json  product_alpha_results.json  product_dashboard_preview.html  product_home_preview.html  product_market_summary.json  tailwind.config.js  tailwind.config.mjs
scripts/: init_db.py
tests/: test_alpha_factory.py  test_alpha_pipeline_integration.py  test_config_loader.py  test_conviction.py  test_fraud.py  test_governance.py  test_phase2.py  test_phase3.py  test_phase5.py  test_portfolio_engine.py  test_runner.py  test_signal_engine_full.py  test_signals.py  test_stability.py  test_valuation.py
tools/: build_history.py  build_snapshot.py  check_next_server.py  debug_signals.py  fetch_ui_preview.py  generate_tracefincontext.py  generate_ui_snapshot.py  init_db.py  md_to_project.py  project_to_md.py  run_alpha_factory.py  run_phase2_pipeline.py  run_phase3.py  system_state_to_md.py  ui_snapshot.html  (+2 more)
(+225 files in other folders)
